2010-09-15  Olivier Hainque  <hainque@adacore.com>
            Jose Ruiz  <ruiz@adacore.com>

	* config/alpha/osf5.h (MD_UNWIND_SUPPORT): Define.
	* config/alpha/osf5-unwind.h: New file.

2010-09-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR bootstrap/45672
	* config/mips/mips.c (mips_units_per_simd_word): Correct return
	type.
	* config/rs6000/rs6000.c (rs6000_units_per_simd_word): Likewise.
	* config/sparc/sparc.c (sparc_units_per_simd_word): Likewise.

2010-09-15  Laurynas Biveinis  <laurynas.biveinis@gmail.com>

	* c-lang.h (struct lang_type): Add variable_size GTY option.

2010-09-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR bootstrap/45672
	* config/rs6000/rs6000.c (TARGET_VECTORIZE_UNITS_PER_SIMD_WORD): New.

2010-09-14  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.c (ix86_lea_for_add_ok): Return false if
	result isn't used in memory address.

2010-09-14  H.J. Lu  <hongjiu.lu@intel.com>

	* defaults.h (UNITS_PER_SIMD_WORD): Removed.
	* config/arm/arm.h (UNITS_PER_SIMD_WORD): Likewise.
	* config/i386/i386.h (UNITS_PER_SIMD_WORD): Likewise.
	* config/mips/mips.h (UNITS_PER_SIMD_WORD): Likewise.
	* config/rs6000/rs6000.h (UNITS_PER_SIMD_WORD): Likewise.
	* config/sparc/sparc.h (UNITS_PER_SIMD_WORD): Likewise.

	* target.def: Add units_per_simd_word to vectorize.

	* targhooks.c (default_units_per_simd_word): New.
	* targhooks.h (default_units_per_simd_word): Likewise.
	* config/arm/arm.c (arm_units_per_simd_word): Likewise.
	(TARGET_VECTORIZE_UNITS_PER_SIMD_WORD): Likewise.
	* config/mips/mips.c (mips_units_per_simd_word): Likewise.
	(TARGET_VECTORIZE_UNITS_PER_SIMD_WORD): Likewise.
	* config/rs6000/rs6000.c (rs6000_units_per_simd_word): Likewise.
	(TARGET_VECTORIZE_UNITS_PER_SIMD_WORD): Likewise.
	* config/sparc/sparc.c (sparc_units_per_simd_word): Likewise.
	(TARGET_VECTORIZE_UNITS_PER_SIMD_WORD): Likewise.

	* tree-vect-loop.c: Replace UNITS_PER_SIMD_WORD with
	TARGET_VECTORIZE_UNITS_PER_SIMD_WORD in comments.

	* tree-vect-stmts.c: Don't include "tm_p.h".