@@ -1,3 +1,8 @@
+2010-09-15  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* config/alpha/alpha.c (alpha_expand_prologue): If stack checking
+	is enabled, probe up to frame_size + STACK_CHECK_PROTECT bytes.
+
 2010-09-15  Olivier Hainque  <hainque@adacore.com>
             Jose Ruiz  <ruiz@adacore.com>
 
